Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,22 @@ steps:
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
 
+- task: DownloadSecureFile@1
+  name: secretKeys
+  displayName: Download secret-keys.gpg
+  inputs:
+    secureFile: 'secret-keys.gpg'
+
 - task: Gradle@2
   displayName: Publish
   inputs:
     gradleWrapperFile: 'gradlew'
-    options: '-PossrhUsername=$(ossrhUsername) -PossrhPassword=$(ossrhPassword)'
+    options: > 
+      -PossrhUsername=$(ossrhUsername) 
+      -PossrhPassword=$(ossrhPassword) 
+      -Psigning.keyId=$(signing.keyId) 
+      -Psigning.password=$(signing.password) 
+      -Psigning.secretKeyRingFile=$(secretKeys.secureFilePath)
     tasks: 'publish'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
